calculation improvements for active skills

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 	<font size="2">Life Leech: </font><font size="2" id="life_leech"></font><br>
 	<font size="2">Mana Leech: </font><font size="2" id="mana_leech"></font><br><br>
 	
-	<font size="2">+ Fire Damage </font><font size="2" id="fdamage"></font><br>
+	<font size="2">+ Fire Damage: </font><font size="2" id="fdamage"></font><br>
 	<font size="2">+ Cold Damage: </font><font size="2" id="cdamage"></font><br>
 	<font size="2">+ Lightning Damage: </font><font size="2" id="ldamage"></font><br>
 	<font size="2">+ Poison Damage: </font><font size="2" id="pdamage"></font><br>
@@ -391,8 +391,8 @@
 	<a>Defense: </a><a id="defense"></a><br>
 	<a id="block_label" style="visibility:hidden;">Block Chance: </a><a id="block"></a><br><br>
 	
-	<font size="2">Magic Find: </font><font size="2" id="mf"></font><br>
-	<font size="2">Gold Find: </font><font size="2" id="gf"></font><br><br>
+	<font size="2">Faster Run/Walk: </font><font size="2" id="frw"></font><br>
+	<font size="2">Velocity: </font><font size="2" id="velocity"></font><br><br>
 	
 	<font size="2">Poison Length Reduced: </font><font size="2" id="poison_reduction"></font><br>
 	<font size="2">Curse Length Reduced: </font><font size="2" id="curse_reduction"></font><br>
@@ -412,8 +412,8 @@
 	<a>Vitality: </a><a id="vitality2"></a><br>
 	<a>Energy: </a><a id="energy2"></a><br><br><br>
 	
-	<font size="2">Faster Run/Walk: </font><font size="2" id="frw"></font><br>
-	<font size="2">Velocity: </font><font size="2" id="velocity"></font><br><br>
+	<font size="2">Magic Find: </font><font size="2" id="mf"></font><br>
+	<font size="2">Gold Find: </font><font size="2" id="gf"></font><br><br>
 	
 	<font size="2">Damage to Mana: </font><font size="2" id="damage_to_mana"></font><br>
 	<font size="2">Thorns: </font><font size="2" id="thorns"></font><br><br>
