added CTC effects

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 	<font size="2">Damage Reduction: </font><font size="2" id="pdr"></font><br><br>
 	
 	<font size="2">+ Attack Speed: </font><font size="2" id="ias"></font><br>
-	<font size="2">Faster Cast Rate: </font><font size="2" id="fcr"></font><br>
+	<div onmouseover="hoverFCR()" onmouseout="updateStats()"><font size="2">Faster Cast Rate: </font><font size="2" id="fcr"></font><br></div>
 	<font size="2">Faster Block Rate: </font><font size="2" id="fbr"></font><br>
 	<font size="2">Faster Hit Recovery: </font><font size="2" id="fhr"></font><br>
 	<br>
@@ -446,6 +446,7 @@
 	<font size="2" id="slower_stam_drain"></font>
 	<font size="2" id="discount"></font>
 	<font size="2" id="glow"></font>
+	<div style="margin-right:-125px;"><font size="2" id="ctc"></font></div>
 </div>
 <div><br><br><br><br><br></div>
 </div>
