code cleanup for how effects are handled

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <select class="dropdown" id="dropdown_merc_weapon" onChange="equipMerc('weapon', this.value)" onContextMenu="equipMerc('weapon', 'weapon')"></select>
 <select class="dropdown" id="dropdown_merc_offhand" onChange="equipMerc('offhand', this.value)" onContextMenu="equipMerc('offhand', 'offhand')"></select>
 <br><br>
-<select class="dropdown" id="dropdown_misc" onChange="addMisc(this.value)"></select>
+<select class="dropdown" id="dropdown_misc" onChange="addEffect('misc',this.value,this.selectedIndex,'')"></select>
 </div> <!-- /Equipment Menus -->
 
 <!--	Corruption Options	-->
