in-progress update
* effects no longer override eachother, but duplicate effects are not automatically disabled
* added remaining gems
* minor fixes

--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@ function initial_load() {
 	var initial_class = classes[random];
 	skills = skills_all[initial_class]
 	equipment.ring2 = equipment.ring1
+	corruptions.ring2 = corruptions.ring1
 	startup(initial_class)
 }
 
