corrected mercenary equipment error

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <select class="dropdown" id="dropdown_charms" onChange="addCharm(this.value)"></select>
 <select class="dropdown" id="dropdown_socketables" onChange="addSocketable(this.value)"></select>
 <br><br>
-<select class="dropdown" id="dropdown_mercenary" onChange="setMercenary(this.value)" onContextMenu="setMercenary('­ ­ ­ ­ Mercenary')"></select>
+<select class="dropdown" id="dropdown_mercenary" onChange="setMercenary(this.value)" onContextMenu="setMercenary('none')"></select>
 <select class="dropdown" id="dropdown_merc_helm" onChange="equipMerc('helm', this.value)" onContextMenu="equipMerc('helm', 'helm')"></select>
 <select class="dropdown" id="dropdown_merc_armor" onChange="equipMerc('armor', this.value)" onContextMenu="equipMerc('armor', 'armor')"></select>
 <select class="dropdown" id="dropdown_merc_weapon" onChange="equipMerc('weapon', this.value)" onContextMenu="equipMerc('weapon', 'weapon')"></select>
