--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
 <div style="width:869px;" id="stats_positioning_alignment">
 <div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 <div style="float:right; width:195px;" id="stats_column_5">
+	<div style="margin-right:-100px;"><font size="2" id="flamme"></font></div>
 	<font size="2" id="itd"></font>
 	<font size="2" id="pmh"></font>
 	<font size="2" id="cbf"></font>
