--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="./data/all.css">
+<!--<script type="text/javascript" src="./data/jquery-3.5.1.min.js"></script>-->
 <script type="text/javascript" src="./data/all_equipment.js"></script>
 <script type="text/javascript" src="./data/all.js"></script>
 <!--
@@ -394,8 +395,8 @@
 	<font size="2">Faster Run/Walk: </font><font size="2" id="frw"></font><br>
 	<font size="2">Speed: </font><font size="2" id="velocity"></font><br><br>
 	
-	<font size="2">Poison Length: </font><font size="2" id="poison_reduction"></font><br>
-	<font size="2">Curse Length: </font><font size="2" id="curse_reduction"></font><br>
+	<font size="2">Poison Reduction: </font><font size="2" id="poison_reduction"></font><br>
+	<font size="2">Curse Reduction: </font><font size="2" id="curse_reduction"></font><br>
 	<br><br>
 	<font size="2">Life per Kill: </font><font size="2" id="life_per_kill"></font><br>
 	<font size="2">Mana per Kill: </font><font size="2" id="mana_per_kill"></font><br><br>
@@ -405,7 +406,7 @@
 	<font size="2">Enemy Lightning Resist: </font><font size="2" id="enemy_lres"></font><br>
 	<font size="2">Enemy Poison Resist: </font><font size="2" id="enemy_pres"></font><br>
 </div>
-<div style="position:absolute; left:540px;" id="stats_column_4">
+<div style="position:absolute; left:520px;" id="stats_column_4">
 	<br>
 	<a>Strength: </a><a id="strength2"></a><br>
 	<a>Dexterity: </a><a id="dexterity2"></a><br>
@@ -457,6 +458,11 @@
 <div style="position:relative; margin-top: 15px; margin-bottom: 33px; width: 869px; float: left;">
 <a style="display: block; color: #bbbbbb; z-index:9; width:869px; height: 25px; position:absolute; text-align:center;" href="https://github.com/Moreina/planner#planner">development plans & feedback</a>
 </div>
+
+<!--		save/load (hidden until working properly)	-->
+<label class="button-file" style="display:none;">Save<button style="display:none" onclick="saveTextAsFile()"></button></label>
+<label class="button-file" style="display:none;">Load<input type="file" id="fileToLoad" onchange="loadFileAsText()"></label>
+<table><tr><td colspan="3"><textarea style="border:none; display:none;" id="inputTextToSave" cols="120" rows="1"></textarea></td></tr></table>
 
 </div>	<!-- /interface -->
 </div>	<!-- /full_interface -->
