--- a/index.html
+++ b/index.html
@@ -374,8 +374,7 @@
 	<font size="2">Deadly Strike: </font><font size="2" id="dstrike"></font><br>
 	<font size="2">Critical Strike: </font><font size="2" id="cstrike"></font><br>
 	<font size="2">Open Wounds: </font><font size="2" id="owounds"></font><br>
-	<font size="2">Enemy Defense: </font><font size="2" id="enemy_defense"></font><br>
-	<font size="2" id="enemy_defense_per_hit"></font><br>
+	<font size="2">Enemy Defense: </font><font size="2" id="enemy_defense"></font><br><br>
 	<font size="2">Life per Hit: </font><font size="2" id="life_per_hit"></font><br>
 	<font size="2">Mana per Hit: </font><font size="2" id="mana_per_hit"></font><br><br>
 	
